# PaddleTraffic

./: .gitignore  NGINX_setup.md  README.md  aws_setup.md  b.ps1  db_help.md  f.ps1  runprod.sh  user_setup.md
backend/: .gitignore  README.md  pyproject.toml
backend/django_project/: makedata.py
backend/django_project/django_project/: settings.py  urls.py
backend/django_project/django_project/templates/: login.html  register.html
backend/django_project/paddle_traffic/: ApiHttpResponses.py  admin.py  apps.py  models.py  serializers.py  views.py
backend/django_project/paddle_traffic/management/commands/: pickle-data.json  seed.py
backend/qrcode_gen/: generateQRCode.py
backend/seed-gen/: generate-json.py  pickle-head-close.json  pickle-head-far.json
frontend/: .env  README.md  index.html  package-lock.json  package.json  postbuild.ps1  postbuild.sh  vite.config.ts
frontend/public/: main.css  manifest.json
frontend/public/style/: about.css  home.css  login.css  main.css  map.css  match.css  profile.css
frontend/public/template_styles/: README.md  main.css
frontend/src/: App.vue  main.ts
frontend/src/api/: functions.ts  rules.ts  types.ts  utils.ts
frontend/src/components/: CommonFooter.vue  CommonHeader.vue  CommonSidebar.vue  MatchForm.vue  MatchList.vue  PickleballMap.vue  ProposalForm.vue  ProposalList.vue  Sidebar.vue  SidebarItem.vue  StaffBio.vue
frontend/src/plugins/: vuetify.ts
frontend/src/router/: index.ts
frontend/src/styles/: Proposition.md
frontend/src/views/: AboutView.vue  EventFormView.vue  EventsView.vue  HomeView.vue  (+9 more)
(+23 files in other folders)
