[tool.poetry]
name = "django-project"
version = "0.1.0"
description = ""
authors = ["brensen11 <90063365+brensen11@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
